# cursor-toolkits

./: .gitignore  CHANGELOG_PROMPTS_COMMANDS.md  COMPLETE_SUMMARY.md  COVERAGE.md  LICENSE  Makefile  PROMPTS_COMMANDS_IMPLEMENTATION.md  README.md  SECURITY.md  SUMMARY.md  package-lock.json  package.json
.github/: ACTIVATION_GUIDE.md  CODEOWNERS  CODE_REVIEW_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  branch-protection-template.md  dependabot.yml
docs/: AUDIT_COMPLET.md  AUDIT_FINAL_ULTRA_STRICT.md  CHANGELOG.md  COMPLETE_ALL_PHASES_PLAN.md  COMPLETE_STATUS.md  CONTRIBUTING.md  DEPENDENCIES_AUDIT.md  EXAMPLES.md  EXECUTIVE_SUMMARY_ALL_PHASES.md  EXECUTIVE_SUMMARY_PHASE2.md  FINAL_ACTION_PLAN.md  FINAL_ALL_PHASES_COMPLETE.md  FINAL_CHECKLIST.md  FINAL_PHASE2_STATUS.md  FINAL_PHASE2_VALIDATION_COMPLETE.md  FINAL_PROFESSIONAL_REPORT.md  FINAL_STATUS.md  GUIDE.md  INSTALLATION.md  MAINTENANCE.md  MCP_SERVERS.md  NEW_TEMPLATES_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_SUMMARY.md  PHASE2_VALIDATION_GUIDE.md  PHASE2_VALIDATION_RESULTS.md  PHASE3_REFACTORING_COMPLETE.md  PLAN_ACTION.md  PROMPTS_AND_COMMANDS.md  PROMPTS_COMMANDS_SUMMARY.md  QUICK_START.md  REFACTORING_PLAN.md  RESUME_AUDIT.md  SCALING_PLAN.md  (+10 more)
templates/python-fastapi/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.json
templates/python-fastapi/.cursor/: .mcp.json.example  commands.json  prompts.json
templates/python-fastapi/.cursor/rules/: docker.mdc  fastapi-basic.mdc  testing.mdc
templates/python-fastapi/.github/workflows/: ci.yml
templates/python-fastapi/src/app/: main.py
templates/python-fastapi/src/app/api/v1/: api.py
templates/python-fastapi/src/app/api/v1/endpoints/: items.py  users.py
templates/python-fastapi/src/app/core/: config.py  database.py
templates/python-fastapi/src/app/models/: __init__.py  item.py  user.py
templates/python-fastapi/tests/: conftest.py  test_api_router.py  test_config.py  test_database.py  test_endpoints_items.py  test_endpoints_users.py  test_main.py
(+130 files in other folders)
